# Shim

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: BashChild.hpp  BashParser.hpp  CallbacksData.hpp  CmdOptions.hpp  CommandLineHandler.hpp  ReplxxCallback.hpp  main.cpp
